--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -7,10 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<script
-			type="text/javascript"
-			src="../dist/browser/shdatetime.min.js"
-		></script>
+		<script type="text/javascript" src="../dist/browser/shdate.min.js"></script>
 		<script>
 			var shdate = new SHDate();
 			document.body.innerHTML = shdate.toString();
