--- a/tests/browser/index.html
+++ b/tests/browser/index.html
@@ -4,13 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>test browser</title>
 	</head>
 	<body>
 		<script type="text/javascript" src="../dist/browser/shdate.min.js"></script>
 		<script>
 			var shdate = new SHDate();
-			document.body.innerHTML = shdate.toString();
+			document.body.innerHTML = shdate.toDateString();
+			console.log(shdate.toDateString());
 		</script>
 	</body>
 </html>
