fix(browser): fix link shdate
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/tests/browser/index.html
+++ b/tests/browser/index.html
@@ -7,7 +7,10 @@
 		<title>test browser</title>
 	</head>
 	<body>
-		<script type="text/javascript" src="../dist/browser/shdate.min.js"></script>
+		<script
+			type="text/javascript"
+			src="../../dist/browser/shdate.min.js"
+		></script>
 		<script>
 			var shdate = new SHDate();
 			document.body.innerHTML = shdate.toDateString();
