chore(refactor): اصلاح برخی موارد feat(refactor): اضافه شدن تست مرورگر
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/tests/browser/index.html
+++ b/tests/browser/index.html
@@ -9,8 +9,9 @@
 	<body>
 		<script
 			type="text/javascript"
-			src="../../dist/browser/shdate.min.js"
+			src="./node_modules/shdate/dist/browser/shdate.min.js"
 		></script>
+
 		<script>
 			var shdate = new SHDate();
 			document.body.innerHTML = shdate.toDateString();
